# open-sculpt

./: .gitignore  Cargo.toml
Android/: build.gradle.kts  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/io/dispersia/opensculpt/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/io/dispersia/opensculpt/: MainActivity.kt
Android/app/src/main/res/values/: strings.xml  styles.xml
Android/app/src/test/java/io/dispersia/opensculpt/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
crates/android/: Cargo.toml
crates/android/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/open-sculpt/: Cargo.toml
crates/open-sculpt/src/: main.rs
