[package]
name = "android"
version = "0.1.0"
edition = "2024"

[lib]
name = "open_sculpt"
crate-type = [ "cdylib" ]

[dependencies]
core = { path = "../core" }

android_logger = "0.15"
log = "0.4"
winit = { path = "../../../winit/winit", features = [ "android-game-activity" ] }

[package.metadata.android]
build_args = [ "armv7-linux-androideabi", "aarch64-linux-android" ]
target_sdk_version = 35
min_sdk_version = 28
